Update spotbugs to 4.7.3